--- a/app/templates/credit_cards/associated_records.html
+++ b/app/templates/credit_cards/associated_records.html
@@ -46,82 +46,82 @@
         </form>
     </section>
     <a href="{{ url_for('credit_card.index') }}" class="btn btn-light fs-6"><i class="bi bi-arrow-return-left"></i> Go back</a>
-    <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 300px;">
-                <table class="table table-striped table-hover" id="expenses-table">
-            <thead class="sticky-top">
-                <tr>
-                    <th scope="col"># Id</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Credit Card</th>
-                    <th scope="col">Bank Account</th>
-                    <th scope="col">Category</th>
-                    <th scope="col">Create at</th>
-                </tr>
-            </thead>
-            <tbody id="expenses-table-body">
-                {% for expense in expenses %}                
-                <tr>
-                    <th scope="row">{{ expense.id }}</th>
-                    <td>{{ expense.amount }}</td>
-                    <td> {{ expense.description or '-' }} </td>
-                    <td>{{ expense.credit_card.nick_name or '-' }}</td>
-                    <td>{{ expense.bank_account.nick_name or '-' }}</td>
-                    <td>{{ expense.expense_category.name }}</td>
-                    <td>{{ expense.created_at }}</td>
-                </tr>
-                {% endfor %}
-                
-            </tbody>
-        </table>
+
+    <div class="my-3 border rounded-3">
+        <div class=" rounded-top d-flex align-items-center justify-content-center" style="height: 50px; background-color: #ff0000;">
+            <h4 class="d-flex justify-content-center">Expenses</h4>
+        </div>
+        <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
+            <table class="table table-borderless table-hover text-center" id="expenses-table">
+                <thead class="sticky-top" >
+                    <tr class="table-danger">
+                        <th scope="col"># Id</th>
+                        <th scope="col" class="text-start">Amount</th>
+                        <th scope="col">Is Cash</th>
+                        <th scope="col" class="text-start">Description</th>
+                        <th scope="col">Credit Card</th>
+                        <th scope="col">Bank Account</th>
+                        <th scope="col" class="text-start">Category</th>
+                        <th scope="col">Create at</th>
+                    </tr>
+                </thead>
+                <tbody id="expenses-table-body">
+                    {% for expense in credit_card.expenses %}                
+                    <tr>
+                        <th scope="row">{{ expense.id }}</th>
+                        <td class="text-start">{{ format_amount(expense.amount) }}</td>
+                        <td>{{ 'YES' if expense.is_cash else 'NO' }}</td>
+                        <td class="text-start"> {{ expense.description or '-' }} </td>
+                        <td>{{ expense.credit_card.nick_name or '-' }}</td>
+                        <td>{{ expense.bank_account.nick_name }}</td>
+                        <td class="text-start">{{ expense.expense_category.name }}</td>
+                        <td>{{ expense.created_at }}</td>
+                    </tr>
+                    {% endfor %}
+                    
+                </tbody>
+            </table>
+        </div>
+        <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
+            <p class="fs-6 fw-bold">TOTAL: {{ total_amount(credit_card.expenses) }}</p>
+        </div>
     </div>
 
-    <h3>Payments</h3>
-    <div id="payments-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-2" style="max-height: 300px;">
-                <table class="table table-striped table-hover" id="expenses-table">
-            <thead class="sticky-top">
-                <tr>
-                    <th scope="col"># Id</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col">Credit Card</th>
-                    <th scope="col">Bank Account</th>
-                    <th scope="col">Create at</th>
-                    <th scope="col">Actions</th>
-                </tr>
-            </thead>
-            <tbody id="payments-table-body">
-                {% for payment in payments %}                
-                <tr>
-                    <th scope="row">{{ payment.id }}</th>
-                    <td>{{ payment.amount }}</td>
-                    <td>{{ payment.credit_card.nick_name or '-' }}</td>
-                    <td>{{ payment.bank_account.nick_name or '-' }}</td>
-                    <td>{{ payment.created_at }}</td>
-                    <td>
-                        <div class="d-flex gap-2">
-                            <button 
-                                type="button" 
-                                class="btn btn-success" 
-                                data-bs-toggle="modal" 
-                                data-bs-target="#edit-credit-card-payment"
-                                data-endpoint="{{ url_for('accounts_receivable.update_loan_payment', loan_payment_id=payment.id) }}"
-                                data-credit-card-payment-id="{{ payment.id }}"
-                                data-amount="{{ payment.amount }}"
-                                data-credit-card-id="{{ payment.credit_card_id }}"
-                                data-bank-account-id="{{ payment.bank_account_id }}"
-                            >
-                            Edit
-                            </button>
-                            <a href="{{ url_for('credit_card_payment.delete', id=payment.id) }}" class="btn btn-danger">Delete</a>
-                        </div>
-                    </td>
-                </tr>
-                {% endfor %}
-                
-            </tbody>
-        </table>
+    <div class="my-5 border rounded-3">
+        <div class="bg-success rounded-top d-flex align-items-center justify-content-center" style="height: 50px;">
+            <h4 class="d-flex justify-content-center">Credit Card Payments</h4>
+        </div>
+
+            <div id="payments-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
+                <table class="table table-borderless table-hover text-center" id="expenses-table">
+                    <thead class="sticky-top">
+                        <tr class="table-success">
+                            <th scope="col"># Id</th>
+                            <th scope="col" class="text-start">Amount</th>
+                            <th scope="col">Credit Card</th>
+                            <th scope="col">Bank Account</th>
+                            <th scope="col">Create at</th>
+                        </tr>
+                    </thead>
+                    <tbody id="payments-table-body">
+                        {% for payment in credit_card.payments %}                
+                        <tr>
+                            <th scope="row">{{ payment.id }}</th>
+                            <td class="text-start">{{ format_amount(payment.amount) }}</td>
+                            <td>{{ payment.credit_card.nick_name or '-' }}</td>
+                            <td>{{ payment.bank_account.nick_name or '-' }}</td>
+                            <td>{{ payment.created_at }}</td>
+                        </tr>
+                        {% endfor %}
+                        
+                    </tbody>
+                </table>
+            </div>
+
+        <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
+            <p class="fs-6 fw-bold mx-2">TOTAL: {{ total_amount(credit_card.payments) }}</p>
+        </div>
     </div>
-    <p class="">Total: $0.00</p>
     <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
